updates configurations for 0.3.1-SNAPSHOT apix image standardizes build.gradle