@@ -15,12 +15,45 @@ plugins {
     id 'net.researchgate.release' version '2.6.0'
     id 'io.codearte.nexus-staging' version '0.9.0'
     id 'com.palantir.docker' version '0.13.0'
+    id 'org.dm.bundle' version '0.10.0'
 }
 
-allprojects {
-    apply plugin: 'maven'
+ext {
+    name = 'Api-X Sparqler'
+    description = 'A SPARQL API service'
+    url = 'https://github.com/pan-dora/apix-sparqler/'
+    inceptionYear = '1997'
+    vendor = 'pandorasystems'
+    homepage = 'https://pan-dora.github.io/'
+    license = 'Apache 2'
+}
 
-    group = 'cool.pandora'
+configurations {
+    buildToolsConfig
+}
+
+dependencies {
+    buildToolsConfig "cool.pandora:pandora-build-tools:0.1.3"
+}
+
+task processBuildTools(type: Copy) {
+    from {
+        configurations.buildToolsConfig.collect {
+            zipTree(it).matching {
+                include 'checkstyle/*.xml'
+                include 'license/*.txt'
+            }
+        }
+    }
+    into 'build'
+}
+
+configure(allprojects) { project ->
+    apply plugin: 'maven'
+    apply plugin: 'java'
+    apply plugin: 'org.dm.bundle'
+
+    group = 'cool.pandora.exts'
 
     repositories {
         jcenter()
@@ -28,9 +61,59 @@ allprojects {
         mavenLocal()
     }
 
+    ext.camelVersionRange = '[2.18,3)'
+    ext.activemqVersionRange = '[5.14,6)'
+    ext.fcrepoCamelVersionRange = '[4.5,5)'
+    ext.fcrepoCamelToolboxVersionRange = '[4.7.1,5)'
+    ext.fcrepoCamelVersion = '4.5.0'
+    ext.activemqVersion = '5.14.1'
+    ext.camelVersion = '2.19.2'
+    ext.commonsCodecVersion = '1.10'
+    ext.commonsIoVersion = '2.5'
+    ext.commonslangVersion = '3.6'
+    ext.dexxcollectionVersion = "0.6"
+    ext.httpclientVersion = '4.5.2'
+    ext.httpcoreVersion = '4.4.5'
+    ext.jacksonVersion = '2.9.0'
+    ext.jenaVersion = '3.1.1'
+    ext.junitVersion = "4.12"
+    ext.jsonldVersion = '0.11.1'
+    ext.logbackVersion = '1.2.3'
+    ext.thriftVersion = "0.9.3"
+    ext.defaultOsgiImports = 'org.osgi.service.blueprint;version="[1,2)",*'
+    ext.projectOsgiVersion = project.version.replaceAll("-SNAPSHOT", ".SNAPSHOT")
+
+
+    compileJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+        options.encoding = 'UTF-8'
+    }
+
+    compileTestJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+        options.encoding = 'UTF-8'
+        options.compilerArgs += "-parameters"
+    }
+
+    processResources {
+        filesMatching(["**/Dockerfile", "**/*.cfg"]) {
+            expand(project.properties)
+        }
+    }
+
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
             options.compilerArgs.add("-Xlint:unchecked")
+            options.compilerArgs.add("-Xlint:deprecation")
+//                options.compilerArgs.addAll(["--add-modules", "java.se.ee"])
+        }
+    }
+
+    compileTestJava {
+        doFirst {
+//                options.compilerArgs.addAll(['--add-modules', 'java.se.ee'])
             options.compilerArgs.add("-Xlint:deprecation")
         }
     }
@@ -49,92 +132,39 @@ allprojects {
         }
     }
 
+    check.dependsOn processBuildTools
+
+    def dockerResourceDir = "${rootProject.buildDir}/resources/main/docker"
+    def mavenInstallPath = "repository/cool/pandora/exts"
+
+    docker {
+        name 'pandorasystems/exts-sparqler'
+        tags "${version}"
+        dockerfile file("${dockerResourceDir}/Dockerfile")
+        files "${dockerResourceDir}/cfg", "${dockerResourceDir}/entrypoint.sh"
+        copySpec.from("${buildDir}/maven").into("${mavenInstallPath}")
+        pull true
+        noCache true
+    }
+
+    def homeDir = System.getProperty('user.home')
+    def mavenLocal = new File(homeDir, ".m2/repository/cool/pandora/exts")
+
+    task copyTask(type: Copy) {
+        from mavenLocal
+        into "${rootProject.buildDir}/maven"
+    }
+
+    copyTask.dependsOn install
 }
 
-subprojects {
+configure(subprojects) { subproject ->
     apply plugin: 'com.bmuschko.nexus'
-    apply plugin: 'java'
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
     apply plugin: 'checkstyle'
     apply plugin: 'com.github.hierynomus.license'
     apply plugin: 'jacoco'
-
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    ext {
-        vendor = 'Pandora Ecosystem'
-        homepage = 'http://cool.pandora'
-        docURL = 'https://github.com/pan-dora/pandora-demo/wiki'
-        license = 'Apache 2'
-
-        camelVersionRange = '[2.18,3)'
-        activemqVersionRange = '[5.14,6)'
-        fcrepoCamelVersionRange = '[4.5,5)'
-        fcrepoCamelToolboxVersionRange = '[4.7.1,5)'
-
-        /* Dependencies */
-        activemqVersion = '5.14.1'
-        camelVersion = '2.19.2'
-        commonsIoVersion = '2.5'
-        commonsLangVersion = '3.4'
-        derbyVersion = '10.12.1.1'
-        fcrepoCamelVersion = '4.5.0'
-        fcrepoCamelToolboxVersion = '4.7.1'
-        guavaVersion = '18.0'
-        hk2Version = '2.4.0'
-        httpclientVersion = '4.5.2'
-        httpcoreVersion = '4.4.5'
-        jacksonVersion = '2.9.0'
-        jenaVersion = '3.1.1'
-        junitVersion = '4.12'
-        jsonldVersion = '0.10.4'
-        logbackVersion = '1.2.3'
-        marmottaVersion = '3.3.0'
-        postgresqlVersion = '9.4.1208'
-        rdf4jVersion = '2.2.2'
-        saxonVersion = '9.6.0-7'
-        slf4jVersion = '1.7.25'
-        springVersion = '4.1.7.RELEASE'
-        woodstoxVersion = '4.4.1'
-        xercesVersion = '2.11.0'
-
-        /* Transitive deps */
-        cal10nVersion = '0.8.1'
-        commonsBeanutilsVersion = '1.8.3'
-        commonsCodecVersion = '1.10'
-        commonsCollectionsVersion = '3.2.1'
-        commonsCsvVersion = '1.4'
-        commonsDigesterVersion = '1.8'
-        commonsHttpclientVersion = '3.1'
-        commonsValidatorVersion = '1.4.0'
-        dexxVersion = '0.6'
-        fluentHcVersion = '4.5.2'
-        fcrepoClientVersion = '0.2.1'
-        httpclientCacheVersion = '4.3.5'
-        httpmimeVersion = '4.5.2'
-        httpcoreNioVersion = '4.4.4'
-        jaxenVersion = '1.1.6'
-        jdom2Version = '2.0.5'
-        jodaTimeVersion = '2.5'
-        jsonldSesameVersion = '0.5.1'
-        semarglVersion = '0.6.1'
-        sesameVersion = '2.7.13'
-        thriftVersion = '0.9.2'
-
-        /* Testing */
-        paxExamVersion = '4.9.1'
-        karafVersion = '4.0.5'
-        fcrepoVersion = '4.6.0'
-        fusekiVersion = '2.3.1'
-        xercesVersion = '2.11.0'
-        osgiVersion = '4.3.1'
-
-        /* OSGi */
-        defaultOsgiImports = 'org.osgi.service.blueprint;version="[1,2)",*'
-        projectOsgiVersion = project.version.replaceAll("-SNAPSHOT", ".SNAPSHOT")
-    }
 
     task processConfig(type: Copy) {
         from('src/main/cfg') {
@@ -163,7 +193,7 @@ subprojects {
     }
 
     jacoco {
-        toolVersion = "0.7.6.201602180812"
+        toolVersion = "0.7.9"
     }
 
     license {
@@ -183,25 +213,36 @@ subprojects {
         }
         repositories {
             maven {
-                url "$buildDir/maven"
+                url "${rootProject.buildDir}/maven"
             }
         }
     }
 
+    bundle {
+        includeTransitiveDependencies = true
+        passProjectProperties = false
+    }
+
     modifyPom {
+        //noinspection GroovyAssignabilityCheck
         project {
-            name 'API-X Sparqler'
-            description 'A SPARQL API service'
-            url 'https://github.com/pan-dora/apix-sparqler/'
-            inceptionYear '2017'
+            name name
+            description description
+            url url
+            inceptionYear inceptionYear
+
+            organization {
+                name vendor
+                url homepage
+            }
 
             developers {
                 developer {
                     id 'christopher-johnson'
                     name 'Christopher Johnson'
                     email 'chjohnson @ (domain of organization url)'
-                    organization ''
-                    organizationUrl ''
+                    organization vendor
+                    organizationUrl homepage
                     roles {
                         role 'developer'
                     }
@@ -237,46 +278,60 @@ subprojects {
     }
 }
 
-configurations {
-    buildToolsConfig
-}
+project("exts-sparqler") {
+    description = 'RDF to JSON-LD serialization service'
+    dependencies {
+        compile group: 'org.apache.camel', name: 'camel-jetty9', version: camelVersion
+        compile group: 'org.apache.camel', name: 'camel-blueprint', version: camelVersion
+        compile group: 'org.apache.camel', name: 'camel-saxon', version: camelVersion
+        compile group: 'org.apache.camel', name: 'camel-http4', version: camelVersion
+        compile group: 'com.github.jsonld-java', name: 'jsonld-java', version: '0.11.1'
+        compile("org.fcrepo.camel:fcrepo-camel:${fcrepoCamelVersion}"){
+            exclude group: 'com.github.jsonld-java', module: 'jsonld-java'
+        }
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
 
+        testCompile group: 'junit', name: 'junit', version: junitVersion
+        testCompile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
+        testCompile group: 'org.apache.camel', name: 'camel-test-blueprint', version: camelVersion
+    }
 
-dependencies {
-    buildToolsConfig "cool.pandora:pandora-build-tools:0.1.2"
-}
-
-task processBuildTools(type: Copy) {
-    from {
-        configurations.buildToolsConfig.collect {
-            zipTree(it).matching {
-                include 'checkstyle/*.xml'
-                include 'license/*.txt'
-            }
+    jar {
+        manifest {
+            attributes 'Import-Package': "org.fcrepo.camel;version=${fcrepoCamelVersion},${defaultOsgiImports}",
+                    'Export-Package': "cool.pandora.exts.sparqler;version=${projectOsgiVersion}"
         }
     }
-    into 'build'
+
+    artifacts {
+        archives(file('build/cfg/main/cool.pandora.exts.sparqler.cfg')) {
+            classifier 'configuration'
+            type 'cfg'
+        }
+    }
 }
 
-def homeDir = System.getProperty('user.home')
-def mavenLocal = new File(homeDir, ".m2/repository/cool/pandora")
+project("sparqler-karaf") {
+    description = 'Karaf Provisioning Features for repository services'
 
-docker {
-    name 'pandorasystems/exts-sparqler'
-    tags 'latest'
-    dockerfile file('Dockerfile')
-    copySpec.from("${buildDir}/maven").into("repository/cool/pandora")
-    files "${projectDir}/cfg", "entrypoint.sh"
-    buildArgs([BUILD_VERSION: 'version'])
-    labels(['key': 'value'])
-    pull true
-    noCache true
+    processResources {
+        outputs.upToDateWhen { false }
+        expand project.properties
+    }
+
+    artifacts {
+        archives(file('build/resources/main/features.xml')) {
+            classifier 'features'
+            type 'xml'
+        }
+    }
+
+    jar {
+        manifest {
+            attributes 'Import-Package': "${defaultOsgiImports}",
+                    'Export-Package': "cool.pandora.exts.sparqler-karaf;version=${projectOsgiVersion}"
+        }
+    }
 }
 
-task copyTask(type: Copy) {
-    from mavenLocal
-    into 'build/maven'
-}
-
-check.dependsOn processBuildTools
 
